@@ -39,6 +39,11 @@ words in fully hyphenated form.
 .B \-s
 (voikkospell) Prints suggestions (S:) for incorrectly spelled words.
 .TP
+.B \-cn
+(voikkospell) Set cache size parameter to n. -1 disables the cache and 0 is the default.
+For checking large amounts of unsorted text you may want to set n to 5 to get better
+performance.
+.TP
 (voikkospell)
 .B ignore_dot=n
 .TP
